--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -5,11 +5,8 @@
 }
 
 .footer-inner {
-  max-width: 1166px;
   width: 100%;
-  margin: 0 auto;
-  padding: 20px 80px;
-  box-sizing: border-box;
+  padding: 20px 0;
   display: flex;
   align-items: center;
   justify-content: space-between;
