--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -4,11 +4,7 @@
 }
 
 .header-inner {
-  max-width: 1166px;
   width: 100%;
-  margin: 0 auto;
-  padding: 0 80px;
-  box-sizing: border-box;
   display: flex;
   align-items: center;
   justify-content: space-between;
